tests/functional2/lang/value-printer/eval-fail-elide-list.err.exp
error: expected a Boolean but found a list: [ 1 [ 2 3 4 5 6 7 8 9 [ 1 «2 items elided» ] «2 items elided» ] «1 item elided» ]
       at /pwd/in.nix:2:3:
            1| assert (
            2|   let x = [ 1 [ 2 3 4 5 6 7 8 9 x 10 11 ] 12 ];
             |   ^
            3|   in builtins.deepSeq x x
